tests/infix-without-op/out.txt
error: infix identifier used without preceding `op`: +
  ┌─ err.sml:1:9
  │
1 │ val _ = + (1, 2)
  │         ^

parsing failed
